-Login FATTO -Aggiunte string all'xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,11 @@
     <string name="app_name">FansFun</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="registrati">
+        <u>Registrati</u>
+    </string>
+    <string name="login_u">
+        <u>Login</u>
+    </string>
 </resources>
